<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_weight="5"
            >
            <EditText
                android:id="@+id/editCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:digits="1234567890"
                android:maxLength="10"
                android:imeOptions="actionSearch"
                android:hint="@string/registro_nombre_campo_cedula"
                android:gravity="center_vertical" />

        </android.support.design.widget.TextInputLayout>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginTop="13dp"
            android:scaleType="fitCenter"
            android:layout_marginLeft="16dp"
            android:background="@drawable/round_corner"
            android:id="@+id/buttonBuscar"
            android:src="@drawable/ic_lupa_person"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/textViewDatosGenerales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/registro_nombre_label_datos_personales"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editNombre"
            android:hint="@string/registro_nombre_campo_abonado"
            android:inputType="textFilter|textNoSuggestions"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@null"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fechanacimiento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editfechanacimiento"
            android:hint="@string/registro_nombre_campo_fechanacimiento"
            android:inputType="textFilter|textNoSuggestions"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@null"
            android:focusable="false"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_lugarnacimiento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editlugarnacimiento"
            android:hint="@string/registro_nombre_campo_lugarnacimiento"
            android:inputType="textFilter|textNoSuggestions"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@null"
            android:focusable="false"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_telefono"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/editDomicilio"
            android:hint="@string/registro_nombre_campo_domicilio"
            android:inputType="textFilter|textNoSuggestions"
            android:editable="false"
            android:background="@null"
            android:focusable="false"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/registro_nombre_campo_telefono"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#C8C9CB" />

    </LinearLayout>
    <Button
        android:id="@+id/buttonAddTelefonos"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@drawable/round_corner"
        android:textColor="@android:color/white"
        android:text="@string/registro_nombre_boton_telefono"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_estadocivil"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/editestadocivil"
            android:hint="@string/registro_nombre_campo_estadocivil"
            android:inputType="textFilter|textNoSuggestions"
            android:editable="false"
            android:background="@null"
            android:focusable="false"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Conyuge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/editconyuge"
            android:hint="@string/registro_nombre_campo_conyuge"
            android:inputType="textFilter|textNoSuggestions"
            android:editable="false"
            android:background="@null"
            android:focusable="false"
            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/round_corner"
        android:textColor="@android:color/white"
        android:text="@string/registro_boton_registro"
        android:id="@+id/buttonRegistro"
        android:layout_gravity="center_horizontal" />




</LinearLayout>
