<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Cabecera del tipo de telefon personal-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Texto de la cabecera-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/registro_telefono_personal"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <!-- Linea Horizontal-->
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="#C8C9CB" />

        </LinearLayout>
        <!-- Lista donde se agregara mas posivilidades de ingresar un telefono personal-->

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/listaTelefonoPersonal"/>
        <!-- Boton que permitira agregar un nuevo telefono personal-->
            <Button
                android:id="@+id/buttonAddTelefonoContacto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Add more"/>
        <!-- Cabecera del tipo de telefon emergencia-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <!-- Texto de la cabecera-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Emergencia"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <!-- Linea Horizontal-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="#C8C9CB" />

        </LinearLayout>
        <!-- Lista donde se agregara mas posivilidades de ingresar un telefono emergencia-->
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listaTelefonoEmergencia"/>
        <!-- Boton que permitira agregar un nuevo telefono emergencia-->
            <Button
                android:id="@+id/buttonAddTelefonoEmergencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="add more"/>

        <!-- Layout que permite ordenar de forma horizontal los componentes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <!-- Boton que permitira registrar los diferentes telefono agregados -->
            <Button
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/registro_boton_guardar_telefono"
                android:id="@+id/buttonGuardar"
                android:layout_gravity="center_horizontal" />

            <!-- Boton que permitira salir del dialog-->
            <Button
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/registro_boton_salir_telefono"
                android:id="@+id/buttonSalir"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>



        </LinearLayout>




</ScrollView>